<resources>
    <string name="app_name">PersonalFinanceTracker</string>

    <!--    Login-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="btn_sign_in">SIGN IN</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="txt_sign_up">Sign Up.</string>

    <!--    Register-->
    <string name="sign_up">Sign Up</string>
    <string name="reg_name">Name</string>
    <string name="reg_email">Email</string>
    <string name="reg_password">Password</string>
    <string name="reg_confirm_password">Confirm Password</string>
    <string name="reg_sign_up">SIGN UP</string>

    <!--    splash screen-->
    <string name="app_logo">App Logo</string>

    <!--    Budget screen-->
    <string name="budget">Budget</string>
    <string name="set_your_monthly_budget">Set Your Monthly Budget</string>
    <string name="enter_budget_amount">Enter Budget Amount</string>
    <string name="save_budget">Save Budget</string>
    <string name="current_budget_rs_0_00">Current Budget: Rs. 0.00</string>
    <string name="budget_used_rs_0_00">Budget Used: Rs. 0.00</string>
    <string name="budget_usage">Budget Usage</string>

    <!--Dashboard screen-->
    <string name="profileName">Hey, Olivia!</string>
    <string name="previous_month">Previous Month</string>
    <string name="april_2025">April 2025</string>
    <string name="next_month">Next Month</string>
    <string name="monthly_budget">Monthly Budget</string>
    <string name="rs_20_000_00">Rs. 20,000.00</string>
    <string name="budgetSpent">60% Spent</string>
    <string name="total_balance">Total Balance</string>
    <string name="balance">Rs. 12,345.00</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="income_and_expense_pie_chart">Income and Expense Pie Chart</string>

    <!--   Home screen -->
    <string name="amount">Amount</string>
    <string name="home_income">Income</string>
    <string name="home_expense">Expense</string>
    <string name="home_pick_date">Pick Date</string>
    <string name="home_add_transaction">Add Transaction</string>
    <string name="home_transaction_history">Transaction History</string>

    <!--    Setting screen-->
    <string name="settings">Settings</string>
    <string name="currency">Currency</string>
    <string name="export_data">Export Data</string>
    <string name="import_data">Import Data</string>
    <string name="logout">Logout</string>

    <!--    Summary screen -->
    <string name="summary_transactions">Transactions</string>
    <string name="visual_breakdown">Visual Breakdown</string>
    <string name="summary_food">🍔 Food: Rs. 0.00</string>
    <string name="summary_transport">🚌 Transport: Rs. 0.00</string>
    <string name="summary_bills">💡 Bills: Rs. 0.00</string>
    <string name="summary_other">📦 Other: Rs. 0.00</string>


</resources>