<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SummaryFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/summaryToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#3F51B5"
            android:minHeight="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/customToolbarTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:paddingTop="12dp"
                android:text="@string/summary_transactions"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="0dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">


                <!-- Summary Values Card -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="24dp"
                    android:background="#FFFFFF"
                    android:backgroundTint="#FAFAFA"
                    android:clipToPadding="false"
                    android:elevation="4dp"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/tvFood"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/summary_food"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvTransport"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/summary_transport"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvBills"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/summary_bills"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvOther"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/summary_other"
                        android:textSize="16sp" />
                </LinearLayout>

                <!-- Bar Chart Section -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/visual_breakdown"
                    android:textColor="#444"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <com.github.mikephil.charting.charts.BarChart
                    android:id="@+id/barChart"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="32dp" />


            </LinearLayout>


        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>